# mempal

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benchmarks/: longmemeval_s_summary.md
crates/mempal-aaak/: Cargo.toml
crates/mempal-aaak/src/: codec.rs  lib.rs  model.rs  parse.rs  spec.rs
crates/mempal-aaak/tests/: aaak_test.rs
crates/mempal-api/: Cargo.toml
crates/mempal-api/src/: handlers.rs
crates/mempal-api/tests/: api_test.rs
crates/mempal-cli/: Cargo.toml
crates/mempal-cli/src/: longmemeval.rs  main.rs
crates/mempal-cli/tests/: cli_test.rs
crates/mempal-core/: Cargo.toml
crates/mempal-core/src/: config.rs  db.rs  types.rs  utils.rs
crates/mempal-core/tests/: config_test.rs  db_test.rs  types_test.rs
crates/mempal-embed/: Cargo.toml
crates/mempal-embed/src/: factory.rs  lib.rs  model2vec.rs  onnx.rs
crates/mempal-embed/tests/: embed_test.rs
crates/mempal-ingest/: Cargo.toml
crates/mempal-ingest/src/: lib.rs
crates/mempal-mcp/: Cargo.toml
crates/mempal-mcp/src/: lib.rs  server.rs  tools.rs
crates/mempal-mcp/tests/: mcp_test.rs
crates/mempal-search/: Cargo.toml
crates/mempal-search/src/: filter.rs  lib.rs
crates/mempal-search/tests/: search_test.rs
docs/: aaak-dialect.md
docs/plans/: 2026-04-11-p5-implementation.md  2026-04-15-p8-implementation.md
docs/specs/: 2026-04-13-p7-search-structured-signals.md  2026-04-14-p8-cowork-inbox-push.md
skills/rust-skills/: SKILL.md
skills/rust-skills/references/: async.md  cli.md  crypto.md  embedded.md  gui-makepad.md  migration.md  testing.md  web.md
specs/: p5-agent-diary.spec.md  p5-format-support.spec.md  p5-kg-timeline-stats.spec.md  p5-semantic-dedup.spec.md  p5-wake-up-importance.spec.md  p6-cowork-peek-and-decide.spec.md  p7-search-structured-signals.spec.md  p8-cowork-inbox-push.spec.md  p9-fact-checker.spec.md  p9-ingest-lock.spec.md
src/: lib.rs  main.rs
src/aaak/: codec.rs  mod.rs  signals.rs
src/core/: protocol.rs
src/cowork/: inbox.rs  peek.rs
src/factcheck/: contradictions.rs  mod.rs  names.rs  relations.rs
src/ingest/: lock.rs  mod.rs
src/mcp/: server.rs  tools.rs
tests/: cowork_inbox.rs  fact_check.rs  ingest_lock.rs
