[workspace]
members = [
    "crates/mempal-core",
    "crates/mempal-embed",
    "crates/mempal-ingest",
    "crates/mempal-search",
    "crates/mempal-cli",
    "crates/mempal-aaak",
    "crates/mempal-mcp",
    "crates/mempal-api",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/ZhangHanDong/mempal"
homepage = "https://github.com/ZhangHanDong/mempal"
documentation = "https://github.com/ZhangHanDong/mempal"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
bimap = "0.6"
clap = { version = "4", features = ["derive"] }
model2vec-rs = "0.1"
ort = "2.0.0-rc.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.3.0", features = ["client", "server", "macros", "schemars", "transport-async-rw", "transport-io"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlite-vec = "0.1.9"
tempfile = "3"
thiserror = "2"
tokenizers = "0.22"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
