[package]
name = "mempal"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Project memory for coding agents. Single binary, hybrid search, knowledge graph."
repository = "https://github.com/ZhangHanDong/mempal"
homepage = "https://github.com/ZhangHanDong/mempal"
documentation = "https://github.com/ZhangHanDong/mempal"
rust-version = "1.85"
readme = "README.md"
keywords = ["memory", "mcp", "sqlite", "agents", "search"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mempal"
path = "src/main.rs"

[features]
default = ["model2vec"]
model2vec = ["dep:model2vec-rs"]
onnx = ["dep:ort", "dep:tokenizers"]
rest = ["dep:axum", "dep:tower", "dep:tower-http", "model2vec"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", optional = true }
bimap = "0.6"
clap = { version = "4", features = ["derive"] }
jieba-rs = "0.8"
model2vec-rs = { version = "0.1", optional = true }
ort = { version = "2.0.0-rc.9", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.3.0", features = ["server", "macros", "schemars", "transport-async-rw", "transport-io"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlite-vec = "0.1.9"
tempfile = "3"
thiserror = "2"
tokenizers = { version = "0.22", optional = true }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

[profile.release]
opt-level = "z"        # optimize for size (slightly slower than "3" but much smaller)
lto = true             # link-time optimization — biggest size reduction
codegen-units = 1      # single codegen unit — better optimization, slower compile
strip = true           # strip debug symbols from binary
panic = "abort"        # no unwinding — smaller binary, faster panic

[dev-dependencies]
axum = "0.8"
serde_json = "1"
tempfile = "3"
