[package]
name = "mempal-aaak"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
bimap.workspace = true
jieba-rs = "0.8"
mempal-core = { path = "../mempal-core" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
