[package]
name = "mempal-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "mempal"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
mempal-core = { path = "../mempal-core" }
mempal-embed = { path = "../mempal-embed" }
mempal-ingest = { path = "../mempal-ingest" }
mempal-search = { path = "../mempal-search" }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
