[package]
name = "mempal-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "CLI and local agent interfaces for mempal project memory."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["memory", "mcp", "cli", "sqlite", "agents"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mempal"
path = "src/main.rs"

[features]
default = []
rest = ["dep:mempal-api", "mempal-api/rest"]
onnx = ["mempal-embed/onnx"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
mempal-aaak = { path = "../mempal-aaak", version = "0.1.0" }
mempal-api = { path = "../mempal-api", version = "0.1.0", optional = true }
mempal-core = { path = "../mempal-core", version = "0.1.0" }
mempal-embed = { path = "../mempal-embed", version = "0.1.0" }
mempal-ingest = { path = "../mempal-ingest", version = "0.1.0" }
mempal-mcp = { path = "../mempal-mcp", version = "0.1.0" }
mempal-search = { path = "../mempal-search", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
