[package]
name = "mempal-search"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
mempal-core = { path = "../mempal-core" }
mempal-embed = { path = "../mempal-embed" }
serde_json.workspace = true

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
